svelte/src/styles/rich-text.css
.rich-text {
  & > * + * {
    margin-top: 1lh;
  }

  & > * + h1,
  & > * + h2,
  & > * + h3,
  & > * + h4,
  & > * + h5,
  & > * + h6 {
    margin-top: 1.7em;
  }

  a {
    @media screen and (min-width: 1024px) {
      &:hover {
        opacity: 0.5;
      }
    }
  }

  strong,
  b {
    font-weight: 600;
  }

  blockquote {
    padding: 0 3rem;
  }

  ul {
    list-style-type: disc;
    margin-left: 1.5em;
  }

  ol {
    list-style-type: decimal;
    margin-left: 2.1em;
  }
}

.rich-text-breaks-only {
  & > * + * {
    margin-top: 1.3em;
  }
}

